[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Scripts/Rendering_Test.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
resource_local_to_scene = true

[sub_resource type="PlaneMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true

[sub_resource type="PlaneMesh" id=4]

[sub_resource type="ViewportTexture" id=5]
viewport_path = NodePath("Plane1/Viewport")

[node name="Rendering_Test" type="Spatial"]
script = ExtResource( 1 )

[node name="Plane1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
layers = 2
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null

[node name="Viewport" type="Viewport" parent="Plane1"]
size = Vector2( 512, 512 )
render_target_v_flip = true

[node name="Camera" type="Camera" parent="Plane1/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1 )
cull_mask = 1048569
current = true

[node name="Plane1_Visible_Notifier" type="VisibilityNotifier" parent="Plane1"]
aabb = AABB( -1, -0.05, -1, 2, 0.1, 2 )

[node name="Plane2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, -5 )
layers = 4
material_override = SubResource( 3 )
mesh = SubResource( 4 )
material/0 = null

[node name="Viewport" type="Viewport" parent="Plane2"]
size = Vector2( 512, 512 )
render_target_v_flip = true

[node name="Camera" type="Camera" parent="Plane2/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -4 )
cull_mask = 1048569
current = true

[node name="Plane2_Visible_Notifier" type="VisibilityNotifier" parent="Plane2"]
aabb = AABB( -1, -0.05, -1, 2, 0.1, 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 45, -448 )
texture = SubResource( 5 )
offset = Vector2( 512, 600 )
region_rect = Rect2( 0, 0, 1024, 512 )
[connection signal="visibility_changed" from="Plane1" to="." method="_on_Plane1_visibility_changed"]
[connection signal="screen_entered" from="Plane1/Plane1_Visible_Notifier" to="." method="_on_Plane1_Visible_Notifier_screen_entered"]
[connection signal="screen_entered" from="Plane2/Plane2_Visible_Notifier" to="." method="_on_Plane2_Visible_Notifier_screen_entered"]
